<resources>
    <string name="app_name">RocketReserver</string>
    <string name="oh_no">Oh no… Something went wrong.</string>
    <string name="book_now">Book now</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="submit">Submit</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="tripBooked">%1$d trip(s) has(have) been booked 🚀🚀</string>
    <string name="tripCancelled">A trip has been cancelled</string>
    <string name="subscriptionError">Oops, something wrong happened</string>
</resources>
